<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/assistant"
        android:title="@string/button_assistant"
        android:icon="@drawable/ic_menu_edit"/>
    <item
        android:id="@+id/give_up"
        android:title="@string/button_give_up"
        android:icon="@drawable/ic_menu_myplaces"/>
    <item
        android:id="@+id/undo"
        android:title="@string/button_undo"
        android:icon="@drawable/ic_menu_revert"/>
    <item
        android:id="@+id/redo"
        android:title="@string/button_redo"
        android:icon="@drawable/ic_menu_repeat"/>
    <item
        android:id="@+id/set_bookmark"
        android:title="@string/button_bookmark_set"
        android:icon="@drawable/ic_menu_mark"/>
    <item
        android:id="@+id/get_bookmark"
        android:title="@string/button_bookmark_get"
        android:icon="@drawable/ic_menu_goto"/>
</menu>