<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  
  
  Diese Datei ist Teil von Sudowars.
  
  Sudowars ist Freie Software: Sie können es unter den Bedingungen
  der GNU General Public License, wie von der Free Software Foundation,
  Version 3 der Lizenz oder (nach Ihrer Option) jeder späteren
  veröffentlichten Version, weiterverbreiten und/oder modifizieren.
  
  Sudowars wird in der Hoffnung, dass es nützlich sein wird, aber
  OHNE JEDE GEWÄHELEISTUNG, bereitgestellt; sogar ohne die implizite
  Gewährleistung der MARKTFÄHIGKEIT oder EIGNUNG FÜR EINEN BESTIMMTEN ZWECK.
  Siehe die GNU General Public License für weitere Details.
  
  Sie sollten eine Kopie der GNU General Public License zusammen mit diesem
  Programm erhalten haben. Wenn nicht, siehe <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr 
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="notifications"
        android:title="@string/settings_notifications"
        android:summary="@string/settings_notifications_text"
        android:defaultValue="true" />
        
	<CheckBoxPreference
		android:key="zoom_buttons"
        android:title="@string/settings_show_zoom_buttons"
		android:summary="@string/settings_show_zoom_buttons_text"
		android:defaultValue="false" />
        
    <CheckBoxPreference
        android:key="vibrator"
        android:title="@string/settings_vibrator"
        android:summary="@string/settings_vibrator_text"
        android:defaultValue="true" />

</PreferenceScreen>
