<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="singleplayer_field_size"
        android:title="@string/settings_game_field_size"
        android:summary=""
        android:entries="@array/field_size"
        android:entryValues="@array/field_size_values"
        android:defaultValue="9" />
    
    <ListPreference
        android:key="singleplayer_difficulty"
        android:title="@string/settings_game_difficulty"
        android:summary="asd"
        android:entries="@array/difficulty"
        android:entryValues="@array/difficulty_values"
        android:defaultValue="0" />
    
    <PreferenceCategory android:title="@string/assistants" >
        
        <CheckBoxPreference
            android:key="singleplayer_assistant_show_mistakes"
            android:title="@string/settings_game_assistant_show_mistakes"
            android:defaultValue="true" />
            
    	<CheckBoxPreference
    		android:key="singleplayer_assistant_solve_cells"
            android:title="@string/settings_game_assistant_solve_cells"
    		android:defaultValue="true" />
            
        <CheckBoxPreference
            android:key="singleplayer_assistant_bookmark"
            android:title="@string/settings_game_assistant_bookmark"
            android:defaultValue="true" />
        
        <CheckBoxPreference
            android:key="singleplayer_assistant_back_to_first_error"
            android:title="@string/settings_game_assistant_back_to_first_error"
            android:defaultValue="true" />
    </PreferenceCategory>
    
</PreferenceScreen>
