<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/layBtnSingleplayer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >
    
            <Button
                android:id="@+id/btnSingleplayerContinue"
                android:text="@string/button_singleplayer_continue"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="0dp"
                android:textSize="20dp" />
    
            <Button
                android:id="@+id/btnSingleplayer"
                android:text="@string/button_singleplayer_symbol"
                android:layout_weight="0"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:textSize="20dp" />
    
        </LinearLayout>
    
        <Button
            android:id="@+id/btnMultiplayer"
            android:text="@string/button_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="20dp" />
        
        <Button
            android:id="@+id/btnManual"
            android:text="@string/button_manual"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="20dp" />
        
    </LinearLayout>
    
</merge>