<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 - 2012 Adrian Vielsack, Christof Urbaczek, Florian Rosenthal, Michael Hoff, Moritz Lüdecke, Philip Flohr.
  
  This file is part of Sudowars.
  
  Sudowars is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Sudowars is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Sudowars.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  initial API and implementation:
  Adrian Vielsack
  Christof Urbaczek
  Florian Rosenthal
  Michael Hoff
  Moritz Lüdecke
  Philip Flohr 
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_multiplayer_new"
        android:title="@string/button_multiplayer_new"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_mark" />

    <item
        android:id="@+id/menu_multiplayer_continue"
        android:title="@string/button_multiplayer_continue"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_continue" />
    
    <item
        android:id="@+id/menu_scan"
        android:title="@string/button_bluetooth_scan"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_refresh"/>
</menu>
